2005-09-18  Mike Alexander  <mta@arbortext.com>

	* installexe.sh: Don't add an exe extention to a file that already
	has one.  Patch from Rick Rankin.

2005-09-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.22 "cucumber" is released.

2005-06-28  Marcus Crestani  <crestani@xemacs.org>

	* .cvsignore: Add insert-data-in-exec.

2005-05-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.21 "corn" is released.

2005-04-01  Marcus Crestani  <crestani@xemacs.org>

	The new allocator.

	DUMP_IN_EXEC:
	
	* Makefile.in.in: Only compile insert-data-in-exec if 
        DUMP_IN_EXEC is defined.

2005-03-25  Andrey Slusar  <anrays@gmail.com>
 
        * fakemail.c (CURRENT_USER): Define it if FreeBSD version is >= 
        400000.  Also, when FreeBSD version is >= 400000 geteuid returns 
        uid_t instead of unsigned short. 

2005-03-11  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.20 "cilantro" is released.

2005-03-07  Malcolm Purvis  <malcolmp@xemacs.org>

	* config.values.in:
	* config.values.sh (FileContents): Different regex for autoconf
	2.59.

2004-12-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* make-docfile.c (write_c_args): Handle UNUSED, USED_IF macros.
	(scan_c_file): Handle nested parens in DEFUN argument lists.

2005-02-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.19 "chives" is released.

2005-01-29  Vin Shelton  <acs@xemacs.org>

	* movemail.c (popmail): Pass error string as format parameter
	instead of as part of format string. Security fixes for
	CAN-2005-0100.

2005-02-03  Jerry James  <james@xemacs.org>

	* etags.c: Update to author version 17.11.

2005-01-26  Ben Wing  <ben@xemacs.org>

	* fakemail.c (main):  Add args to fix warning.

2005-01-25  Ben Wing  <ben@xemacs.org>

	* insert-data-in-exec.c (main):
	Need to open everything as binary.

2004-12-06  Ben Wing  <ben@xemacs.org>

	* i.c (pump):
	Undo change of 2003-03-06.  It causes truncation of output at the end.
