@@ -1,3 +1,11 @@
+2005-10-13  Ben Wing  <ben@xemacs.org>
+
+	* i.c:
+	* mmencode.c:
+	Always include config.h first.
+	* winclient.c:
+	Move include of windows.h after config.h.
+
 2005-09-18  Mike Alexander  <mta@arbortext.com>
 
 	* installexe.sh: Don't add an exe extention to a file that already
